--- a/website/src/app/app.component.html
+++ b/website/src/app/app.component.html
@@ -43,7 +43,7 @@
       <div class="about container">
         <div class="col-left">
           <div class="about-img">
-            <img src="./img/img-2.png" alt="img">
+            <img src="../assets/aboutme.png" alt="img">
           </div>
         </div>
         <div class="col-right">
